# pybind11-examples

./: .gitignore  CMakeLists.txt  README.md
python/: __init__.py
python/example_package/: __init__.py
src/: functions.cpp
